--- a/quisi_desk/index.html
+++ b/quisi_desk/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/quisi_desk">
+  <base href="https://antoninobajeli.github.io/quisi_desk/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
