--- a/quisi_desk/index.html
+++ b/quisi_desk/index.html
@@ -24,6 +24,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="quisi_desk">
+  <meta name="google-signin-client_id" content="545603182859-np9b5grqmf57jlro8vukcf7u7317vj17.apps.googleusercontent.com">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
@@ -34,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '2133439875';
+    var serviceWorkerVersion = '2599372590';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
