--- a/quisi_desk/index.html
+++ b/quisi_desk/index.html
@@ -35,10 +35,11 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = '3695617945';
+    var serviceWorkerVersion = '433697507';
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbF6KdB2jxIdibhUybICMHD2opLTriJYs"></script>
 </head>
 <body>
 
