--- a/quisi_desk/index.html
+++ b/quisi_desk/index.html
@@ -35,7 +35,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    var serviceWorkerVersion = "1024040556";
+    const serviceWorkerVersion = "1573601931";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
